<resources>
    <string name="app_name">포메스</string>
    <string name="facebook_app_id">2807495449266774</string>
    <string name="fb_login_protocol_scheme">fb2807495449266774</string>
    <string name="login_button_text">Google로 쉬운 시작</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_button_name">확인</string>
    <string name="negative_button_name">닫기</string>
    <string name="app_usage_data_http_fail_message">데이터 전송에 실패하였습니다.</string>
    <string name="user_http_fail_message">사용자 정보 저장에 실패하였습니다.</string>
    <string name="unexpected_error_message">예상치 못한 에러가 발생하였습니다.</string>
    <string name="common_empty_string"/>
    <string name="common_next_button">다음으로</string>
    <string name="common_go_to_grant">허용하러 가기</string>
    <string name="common_confirm">확인</string>
    <string name="common_age">%d대</string>
    <string name="common_age_under_teenager">10대 미만</string>
    <string name="common_male">남성</string>
    <string name="common_female">여성</string>
    <string name="common_new_line">\n</string>
    <string name="common_string">%s</string>
    <string name="common_number_one">1</string>
    <string name="common_number_two">2</string>
    <string name="common_number_three">3</string>
    <string name="common_dash">-</string>
    <string name="common_close">종료</string>
    <string name="common_cancel">취소</string>
    <string name="common_modify_complete">수정 완료</string>
    <string name="share_kakao">카카오톡 공유</string>
    <string name="update_dialog_title">신규 버전 업데이트</string>
    <string name="update_dialog_message">Fomes의 신규 버전이 업데이트 되었습니다.\n마켓에서 업데이트 진행 후 이용 부탁드립니다.</string>
    <string name="login_subtitle">신작게임 놀이터, 포메스!</string>
    <string name="login_tnc">버튼을 누르시면 <![CDATA[<a href="https://docs.google.com/document/d/1hcU3MQvJf0L2ZNl3T3H1n21C4E82FM2ppesDwjo-Wy4/edit?usp=sharing">사용약관</a>]]> 및 <![CDATA[<a href="https://docs.google.com/document/d/1QxWuv2zlKYsGYglUTiP5d5IFxZUy6HwKGObXC8x0034/edit?usp=sharing">개인정보 취급방침</a>]]>에 동의됩니다.</string>
    <string name="provision_user_info_title">%s님! 당신에 대해 알려주세요.\n게임 성향 분석을 해드릴게요!</string>
    <string name="provision_user_info_subtitle">알려주신 정보는 분석을 위해 사용됩니다.</string>
    <string name="provision_user_info_birth_title">출생연도</string>
    <string name="provision_user_info_job_title">직업</string>
    <string name="provision_user_info_gender_title">성별</string>
    <string name="provision_user_info_gender_male">남자</string>
    <string name="provision_user_info_gender_female">여자</string>
    <string name="provision_life_game_content_title">인생게임</string>
    <string name="provision_life_game_content_hint">가장 기억에 남았던 게임을 적어주세요.</string>
    <string name="birth_spinner_hint">태어난 연도를 선택해주세요.</string>
    <string name="job_spinner_hint">당신의 직업을 선택해주세요.</string>
    <string name="provision_monthly_payment_content_title">월평균 과금</string>
    <string name="provision_user_info_favorite_platform_title">선호 플랫폼</string>
    <string name="favorite_platform_spinner_hint">선호 게임 플랫폼을 선택해주세요.</string>
    <string name="provision_user_info_favorite_genre_title">선호 장르</string>
    <string name="favorite_genre_spinner_hint">선호 게임 장르를 선택해주세요.</string>
    <string name="provision_user_info_least_favorite_genre_title">비선호 장르</string>
    <string name="least_favorite_genre_spinner_hint">비선호 게임 장르를 선택해주세요.</string>
    <string name="provision_user_info_feedback_style_title">피드백 스타일</string>
    <string name="feedback_style_spinner_hint">피드백 성향을 선택해주세요.</string>
    <string name="provision_nickname_title">반가워요! 포메스가 앞으로 당신을 어떻게 부르면 될까요?</string>
    <string name="provision_nickname_subtitle">닉네임은 2글자에서 10글자 사이로 작성해주세요.</string>
    <string name="provision_nickname_content_title">닉네임</string>
    <string name="provision_nickname_content_hint">여기에 닉네임을 입력해주세요.</string>
    <string name="provision_nickname_format_warning">* 닉네임은 2글자에서 10글자 사이로, 한글/영어/숫자/일부 특수문자(^*☆★♡♥_-)로만 작성 가능합니다.</string>
    <string name="provision_nickname_format_special_string_warning">* 닉네임은 특수문자로만 구성될 수 없습니다.</string>
    <string name="provision_nickname_already_exist_warning">* 이미 사용된 닉네임 입니다. 다른 닉네임을 입력해주세요.</string>
    <string name="provision_permission_title">데이터 기반 분석을 위해\n포메스를 찾아서 허용해주세요.</string>
    <string name="provision_permission_subtitle">구글 정책상 직접 선택해서 허용해야 합니다.</string>
    <string name="analysis_total_user_count">/%d명</string>
    <string name="analysis_loading">게임 성향을 분석 중 입니다.</string>
    <string name="current_analysis_subtitle">7일전부터 오늘까지 모바일 게임 플레이를 분석했습니다.</string>
    <string name="analysis_my_genre_title">나의 게임 장르</string>
    <string name="analysis_my_genre_subtitle">나의 7일간 모바일 게임 장르별 플레이 시간 집계</string>
    <string name="analysis_my_genre_chart_text">%s의\n장르</string>
    <string name="analysis_my_genre_used_time_format">총 시간의 %d%%</string>
    <string name="analysis_people_genre_title">나와 비슷한 사람들의 게임 장르</string>
    <string name="analysis_people_genre_subtitle">나이/성별/직업 기준 7일간 모바일 게임 장르별 플레이 시간 집계</string>
    <string name="analysis_my_playtime_rank_title">나의 게임 플레이 시간 등수</string>
    <string name="analysis_my_playtime_rank_subtitle">나의 7일간 게임 플레이 시간 집계</string>
    <string name="analysis_my_playtime_rank_summary">총 %.1f시간 게임 플레이</string>
    <string name="analysis_my_playtime_rank_description_title">나는 %s인데 너는 몇 등이니?</string>
    <string name="analysis_my_playtime_rank_description_content">함께 게임을 즐기는 친구들과 게임 앱 분석결과를 공유하고,\n게임 플레이시간 / 장르 / 게임을 비교해보세요.</string>
    <string name="analysis_my_playtime_rank_no_data_title">등수 산정을 위한 게임 정보가 부족해요.</string>
    <string name="analysis_my_playtime_rank_no_data_content">스마트폰으로 게임을 플레이 하신 후 다시 도전해 보세요.\n플레이 데이터가 쌓이면 나의 등수를 확인할 수 있습니다.</string>
    <string name="analysis_playtime_rank_title">플레이 시간 비교</string>
    <string name="analysis_playtime_rank_subtitle">나와 유저들의 7일간 게임 플레이 시간 집계</string>
    <string name="analysis_playtime_rank_number">%d등</string>
    <string name="analysis_playtime_rank_number_string">%s등</string>
    <string name="analysis_playtime_my_rank_number">나(%s)</string>
    <string name="analysis_playtime_rank_number_last">꼴등</string>
    <string name="analysis_playtime_rank_hours">%.1f시간</string>
    <string name="analysis_favorite_developer_title">최장 플레이 개발사</string>
    <string name="analysis_favorite_developer_subtitle">유저들이 7일간 가장 오래 플레이한 게임의 개발사</string>
    <string name="analysis_favorite_developer_group_mine">나의 1위</string>
    <string name="analysis_favorite_developer_group">%s 1위</string>
    <string name="analysis_favorite_developer_description_title">대표게임</string>
    <string name="analysis_my_games_title">나의 최애 게임들</string>
    <string name="analysis_my_games_subtitle">나의 7일간 모바일 게임별 플레이 시간 집계</string>
    <string name="analysis_my_games_description">%.1f시간 플레이</string>
    <string name="analysis_my_genre_cannot_know_genre">나의 게임 장르를 알수 없어요.</string>
    <string name="analysis_people_games_title">나와 비슷한 사람들의 최애 게임들</string>
    <string name="analysis_people_games_subtitle">나이/성별/직업 기준 7일간 모바일 게임별 플레이 시간 집계</string>
    <string name="analysis_q_lifegame">Q. 인생게임에 대한 분석은 왜 없나요?</string>
    <string name="analysis_a_lifegame">A. 더 정확한 분석을 위해 데이터를 수집 중입니다.\n충분한 데이터가 모이면 최대한 빠르게 인생게임에 대한 분석 &amp; 추천을 오픈하고 알려드리겠습니다! :-)</string>
    <string name="analysis_error_not_enough_data">정보가 부족해서\n알 수 없어요</string>
    <string name="analysis_error_unknown">당신의 게임 성향을 분석하는데 문제가 생겼습니다…\n\n에러가 발생한 것 같습니다.\n빠른 시일내에 대처하겠습니다.\n죄송합니다.</string>
    <string name="analysis_error_not_enough_data_even_others">흑흑.. 게임 성향 분석을 위한\n플레이 정보가 부족해요.\n\n지금 사용중인 모바일 기기에서의\n게임 플레이 기록이 있어야\n성향 분석이 가능합니다.</string>
    <string name="analysis_error_not_enough_data_even_others_subtitle">* 최근 게임 플레이를 했는데 이 화면이 보여서 놀라셨나요? 안심하세요! 게임 정보 동기화에 다소 시간이 걸릴 수 있어요. (최대 1일)</string>
    <string name="analysis_cannot_know_yet">아직 알 수 없어요</string>
    <string name="analysis_game_suggestion_without_1_2_3">앗! 아직 1/2/3위가 없으시네요. 오늘 모바일 게임 한판 어때요?</string>
    <string name="analysis_game_suggestion_without_2_3">앗! 아직 2/3위가 없으시네요. 다른 게임도 해보시는건 어때요?</string>
    <string name="analysis_game_suggestion_without_3">앗! 아직 3위가 없으시네요. 다른 게임도 해보시는건 어때요?</string>
    <string name="analysis_not_enough_title">요즘 게임을 많이 안하셨나봐요….</string>
    <string name="analysis_not_enough_subtitle">괜찮아요! 게임을 플레이하면 다시 분석 해볼 수 있어요.</string>
    <string name="main_tab_recommend">게임 추천</string>
    <string name="main_tab_finished_betatest">종료된 테스트</string>
    <string name="main_tab_betatest">테스트 참여 존</string>
    <string name="main_tab_event">이벤트</string>
    <string name="main_menu_my_wish_list">@string/wish_list</string>
    <string name="main_menu_my_recent_analysis">게임 성향 분석</string>
    <string name="main_menu_my_info">프로필 수정</string>
    <string name="main_menu_fomes_pc_version_guide">PC로 설문 참여하려면?</string>
    <string name="main_menu_settings">설정</string>
    <string name="main_menu_donation">후원하기</string>
    <string name="main_menu_my_ignore_games">관심 없음 처리된 게임들 보기</string>
    <string name="main_menu_advertising">광고보고 포메스 후원하기</string>
    <string name="main_option_menu_fomes_postbox">포메스\n우체통</string>
    <string name="postbox_title">포메스 우체통</string>
    <string name="my_completed_betatest_count_format">%d회 참여</string>
    <string name="betatest_title">이 게임 테스트 어때요?</string>
    <string name="betatest_subtitle">재미있어 보이는 게임의 테스트에 참여해보세요.</string>
    <string name="betatest_complete_switch_text">참여 중 테스트만</string>
    <string name="go_to_join_beta_test">참여하러 가기</string>
    <string name="betatest_target_format">%s 앱 유저 대상</string>
    <string name="betatest_project_status_format">종료 %d일 전</string>
    <string name="betatest_required_time_format">약 %.0f분</string>
    <string name="betatest_reward_none">보상 없음</string>
    <string name="beta_test_completed_label_sub_title">Good! 멋져요! 최고에요!</string>
    <string name="beta_test_completed_label_title_old">완료한 테스트</string>
    <string name="beta_test_completed_label_title">%s 완료</string>
    <string name="beta_test_closed_label_sub_title">아쉬워요…흑흑</string>
    <string name="beta_test_closed_label_title_old">종료된 테스트</string>
    <string name="beta_test_closed_label_title">%s 종료</string>
    <string name="beta_test_empty_text_format">%s 님께 도착할 테스트를 기다리고 있어요.\n테스트가 도착하면 포메스가 알려드릴게요.</string>
    <string name="beta_test_today_close">오늘 종료</string>
    <string name="betatest_not_submitted_my_feedback">나의 의견 제출 미완료</string>
    <string name="betatest_submitted_my_feedback">나의 의견 제출 완료</string>
    <string name="betatest_delivered_my_feedback">나의 의견 전달 완료</string>
    <string name="betatest_collecting_results">다른 참여자들의 결과를 취합 중입니다.</string>
    <string name="betatest_delivered_all_results">모든 결과가 게임사에게 전달되었습니다.</string>
    <string name="betatest_epilogue_coming_soon">테스트 에필로그 (커밍 순)</string>
    <string name="betatest_epilogue_opened">테스트 에필로그 보기</string>
    <string name="betatest_company_says_not_collected_old">게임사 소감 : \?\?\? (모든 결과 취합 시 표시됩니다)</string>
    <string name="betatest_company_says_not_collected">\?\?\? (모든 결과 취합 시 표시됩니다)</string>
    <string name="betatest_company_says">게임사 소감 : %s</string>
    <string name="betatest_company_says_title">게임사 소감 및 계획</string>
    <string name="betatest_progress_attend_label">참여 전</string>
    <string name="betatest_progress_attend_label_doing">참여 중</string>
    <string name="betatest_plan_premium">프리미엄 테스트</string>
    <string name="betatest_plan_lite">간단 테스트</string>
    <string name="betatest_main_tag_min_reward">최소 %s</string>
    <string name="betatest_main_tag_max_reward">최대 %s</string>
    <string name="betatest_my_status_completed">참여 완료</string>
    <string name="betatest_my_status_attend">참여 중</string>
    <string name="finished_betatest_title">종료된 테스트가 궁금해!</string>
    <string name="finished_betatest_subtitle">누가 상을 받았을까? 게임사에는 도움이 되었을까?</string>
    <string name="finished_betatest_complete_switch_text">참여목록 보기</string>
    <string name="finished_beta_test_empty_text_format">아직 완료하신 테스트가 없으시군요!\n지금 테스트를 진행해보시면 어떨까요?</string>
</resources>