<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/provision_nickname_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/provision_nickname_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/provision_nickname_subtitle_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/provision_nickname_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provision_nickname_title_textview" />

    <TextView
        android:id="@+id/provision_nickname_content_title_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/provision_nickname_content_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provision_nickname_subtitle_textview" />

    <EditText
        android:id="@+id/provision_nickname_content_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/provision_nickname_content_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provision_nickname_content_title_textview" />


    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/common_next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteY="519dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>