<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/analysis_error_icon_imageview"
            android:layout_width="38dp"
            android:layout_height="42dp"
            android:layout_marginStart="@dimen/provision_padding_start_end"
            android:layout_marginTop="37dp"
            android:src="@drawable/fomes_face_cry_colored"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/analysis_error_title_textview"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/provision_padding_start_end"
            android:lineSpacingExtra="6dp"
            android:text="@string/analysis_error_unknown"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/provision_title_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/analysis_error_icon_imageview"
            app:layout_constraintStart_toStartOf="@+id/analysis_error_icon_imageview"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/analysis_error_not_enough_data_even_others"/>

        <TextView
            android:id="@+id/analysis_error_subtitle_textview"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:lineSpacingExtra="6dp"
            android:textColor="@color/colorPrimary"
            android:textSize="13dp"
            app:layout_constraintTop_toBottomOf="@id/analysis_error_title_textview"
            app:layout_constraintStart_toStartOf="@+id/analysis_error_title_textview"
            app:layout_constraintEnd_toEndOf="@+id/analysis_error_title_textview"
            tools:text="@string/analysis_error_not_enough_data_even_others_subtitle"/>

        <Button
            android:id="@+id/analysis_error_botton_button"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="38dp"
            android:background="@color/colorPrimary"
            android:text="@string/common_confirm"
            android:textColor="@color/fomes_white"
            android:textSize="@dimen/provision_bottom_button_text_size"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analysis_error_subtitle_textview"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>