<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingEnd="@dimen/provision_padding_start_end"
        android:paddingStart="@dimen/provision_padding_start_end">

        <TextView
            android:id="@+id/my_info_life_game_content_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:text="@string/provision_life_game_content_title"
            android:textColor="@color/fomes_greyish_brown"
            android:textSize="@dimen/provision_content_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/my_info_life_game_content_edittext"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/provision_life_game_content_hint"
            android:inputType="textShortMessage"
            android:textColorHint="@color/textColorHint"
            android:textSize="@dimen/provision_content_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/my_info_life_game_content_title_textview" />


        <View
            android:id="@+id/my_info_content_divider_1"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:background="@color/fomes_pale_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_info_life_game_content_title_textview" />

        <TextView
            android:id="@+id/my_info_content_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:text="@string/provision_user_info_birth_title"
            android:textColor="@color/fomes_greyish_brown"
            android:textSize="@dimen/provision_content_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintStart_toStartOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_1" />

        <Spinner
            android:id="@+id/my_info_birth_spinner"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="25dp"
            android:backgroundTint="@color/fomes_warm_gray_2"
            android:entries="@array/birth_items"
            android:spinnerMode="dialog"
            android:prompt="@string/provision_user_info_birth_title"
            app:layout_constraintBottom_toTopOf="@+id/my_info_content_divider_2"
            app:layout_constraintEnd_toEndOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintStart_toStartOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_1" />

        <View
            android:id="@+id/my_info_content_divider_2"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:background="@color/fomes_pale_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_title_textview" />


        <TextView
            android:id="@+id/my_info_job_title_textview"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:text="@string/provision_user_info_job_title"
            android:textColor="@color/fomes_greyish_brown"
            android:textSize="@dimen/provision_content_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintStart_toStartOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_2" />

        <Spinner
            android:id="@+id/my_info_job_spinner"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:backgroundTint="@color/fomes_warm_gray_2"
            android:spinnerMode="dialog"
            android:prompt="@string/provision_user_info_job_title"
            app:layout_constraintBottom_toTopOf="@+id/my_info_content_divider_3"
            app:layout_constraintEnd_toEndOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintStart_toStartOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_2" />

        <View
            android:id="@+id/my_info_content_divider_3"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:background="@color/fomes_pale_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_info_job_title_textview" />

        <TextView
            android:id="@+id/my_info_gender_title_textview"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:text="@string/provision_user_info_gender_title"
            android:textColor="@color/fomes_greyish_brown"
            android:textSize="@dimen/provision_content_title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintStart_toStartOf="@+id/my_info_life_game_content_title_textview"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_3" />

        <RadioGroup
            android:id="@+id/my_info_gender_radiogroup"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:theme="@style/ProvisioningTheme.RadioGroup"
            app:layout_constraintBottom_toTopOf="@+id/my_info_content_divider_4"
            app:layout_constraintEnd_toEndOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintStart_toStartOf="@+id/my_info_life_game_content_edittext"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_3">

            <RadioButton
                android:id="@+id/my_info_male_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@drawable/male_radiobutton_selector"
                android:drawablePadding="6dp"
                android:text="남자"
                android:textColor="@color/gender_radiobutton_color_selector"
                android:textSize="12dp" />

            <RadioButton
                android:id="@+id/my_info_female_radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableStart="@drawable/female_radiobutton_selector"
                android:drawablePadding="6dp"
                android:text="여자"
                android:textColor="@color/gender_radiobutton_color_selector"
                android:textSize="12dp" />
        </RadioGroup>

        <View
            android:id="@+id/my_info_content_divider_4"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/provision_content_divider_margin_top_bottom"
            android:background="@color/fomes_pale_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_info_gender_title_textview" />

        <Button
            android:id="@+id/my_info_submit_button"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:text="수정 완료"
            android:textSize="13dp"
            android:textColor="@color/fomes_white"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_info_content_divider_4"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>